fix api's bugs && validation logic
